[package]
name = "rust-lambda-https"
version = "0.1.0"
authors = ["mitchgollub <mgollub@live.com>"]
edition = "2018"
autobins=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
tokio = { version = "0.2.21", features = ["full"] }
http = "0.2"
hyper = "0.13"
hyper-rustls = "0.21"

[[bin]]
name = "bootstrap"
path = "src/main.rs"