[package]
name = "rust-lambda-https"
version = "0.1.0"
authors = ["mitchgollub <mgollub@live.com>"]
edition = "2018"
autobins=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
tokio = { version = "0.2.25", features = ["full"] } # required dependency version ^0.2
surf = { version = "2.2.0", default-features = false, features = ["h1-client-rustls", "middleware-logger", "encoding"] }
futures = "0.3.15"

[[bin]]
name = "bootstrap"
path = "src/main.rs"